Updated XML files

--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -9,121 +9,163 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="733dp"
+        android:background="#000000"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="344dp"
+            android:layout_width="209dp"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="101dp"
+            android:layout_marginTop="8dp"
             android:text="Book ISBN number:"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:textColor="@color/white"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/ISBN"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/et_style"
+            android:background="#262626"
             android:ems="10"
             android:minHeight="48dp"
+            android:textColor="#FFFFFF"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="match_parent"
+            android:layout_width="177dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="88dp"
             android:text="Condition:"
-            android:textColor="@color/black"
+            android:textAlignment="center"
+            android:textColor="@color/white"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/Condition"
-            android:layout_width="match_parent"
+            android:layout_width="178dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="113dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/et_style"
+            android:background="#262626"
             android:ems="10"
+            android:importantForAutofill="no"
             android:minHeight="48dp"
-            tools:ignore="SpeakableTextPresentCheck"
-            android:importantForAutofill="no" />
+            android:textColor="#FFFFFF"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="match_parent"
+            android:layout_width="176dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:layout_marginStart="10dp"
-            android:textStyle="bold"
-            android:text="Price:" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="223dp"
+            android:layout_marginTop="87dp"
+            android:text="Price:"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/Price"
-            android:layout_width="match_parent"
+            android:layout_width="178dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="223dp"
+            android:layout_marginTop="113dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/et_style"
+            android:background="#262626"
             android:ems="10"
             android:minHeight="48dp"
+            android:textColor="#FFFFFF"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/FrontCover"
-            android:layout_width="match_parent"
+            android:id="@+id/BackCover"
+            android:layout_width="170dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="499dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/roundbutton"
+            android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@+id/ivBackImage"
+            android:backgroundTint="#D22630"
             android:padding="10dp"
-            android:text="FrontCover" />
+            android:text="BackCover"
+            android:textColor="#071D49" />
 
         <ImageView
             android:id="@+id/ivFrontImage"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_width="208dp"
+            android:layout_height="211dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="192dp"
             tools:ignore="ImageContrastCheck"
             tools:src="@tools:sample/avatars" />
 
-        <Button
-            android:id="@+id/BackCover"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/roundbutton"
-            android:padding="10dp"
-            android:text="BackCover" />
-
         <ImageView
-            android:id = "@+id/ivBackImage"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            tools:src="@tools:sample/avatars"/>
+            android:id="@+id/ivBackImage"
+            android:layout_width="208dp"
+            android:layout_height="211dp"
+            android:layout_below="@+id/ivFrontImage"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="30dp"
+            tools:src="@tools:sample/avatars" />
+
+        <Button
+            android:id="@+id/FrontCover"
+            android:layout_width="193dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="277dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@+id/ivFrontImage"
+            android:backgroundTint="#D22630"
+            android:padding="10dp"
+            android:text="FrontCover"
+            android:textColor="#071D49" />
 
         <Button
             android:id="@+id/Submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="10dp"
+            android:layout_below="@+id/ivBackImage"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="94dp"
+            android:layout_marginTop="21dp"
             android:layout_marginEnd="70dp"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/roundbutton"
+            android:backgroundTint="#D22630"
             android:padding="10dp"
-            android:text="Submit" />
+            android:text="Submit"
+            android:textColor="#071D49" />
 
 
-    </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
