--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -13,41 +14,46 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/ivImage"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:id="@+id/cover2"
+            android:layout_width="131dp"
+            android:layout_height="216dp"
             android:scaleType="centerCrop"
             tools:srcCompat="@tools:sample/avatars" />
 
         <LinearLayout
-            android:layout_width="100dp"
+            android:layout_width="172dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tvUsername"
-                android:layout_width="100dp"
+                android:id="@+id/tvUser"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:textColor="#FFFFFF"
+                tools:text="bob" />
+
+            <TextView
+                android:id="@+id/tvBookTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="#FFFFFF"
                 tools:text="rahul" />
 
             <TextView
-                android:id="@+id/tvTimeDate"
+                android:id="@+id/tvISBN"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:textColor="#FFFFFF" />
 
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvDescription"
+            android:id="@+id/tvPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="26dp"
             android:textColor="#F4F4F4"
             tools:text="trying to look hipster" />
 
